--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+Fri Aug 18 14:23:18 2000  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
+
+	* function.c (fixup_var_refs_1, case MEM): Update CODE after
+	updating X.
+
 Fri 18-Aug-2000 18:33:45 BST  Neil Booth  <NeilB@earthling.net>
 
 	* cpphash.h: Use HAVE_DESIGNATED_INITIALIZERS.
