* config/sh/sh.md (fpu_switch0, fpu_switch1): Simplify. * config/sh/sh.c (fpscr_set_from_mem): Use them.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35792 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+Fri Aug 18 16:01:18 2000  Alexandre Oliva  <aoliva@redhat.com>
+
+	* config/sh/sh.md (fpu_switch0, fpu_switch1): Simplify.
+	* config/sh/sh.c (fpscr_set_from_mem): Use them.
+
 Fri Aug 18 14:23:18 2000  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
 
 	* regmove.c (perhaps_ends_bb_p): New function.
