--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -6,12 +6,13 @@ Fri Aug 18 16:22:20 2000  Alexandre Oliva  <aoliva@redhat.com>
 	* configure.in: Get them included with `tm_file's.
 	* configure: Rebuilt.
 
-Fri Aug 18 16:01:18 2000  Alexandre Oliva  <aoliva@redhat.com>
-
 	* config/sh/sh.md (fpu_switch0, fpu_switch1): Simplify.
 	* config/sh/sh.c (fpscr_set_from_mem): Use them.
 
 Fri Aug 18 14:23:18 2000  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
+
+	* stor-layout.c (compute_record_type): Don't use mode of single
+	field as mode of record if not integer mode of same type.
 
 	* regmove.c (perhaps_ends_bb_p): New function.
 	(optimize_reg_copy_1, optimize_reg_copy_2): Call it.
