Only allow allow rotations by a constant amount. Do not generate ROTL instruction.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35797 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-08-18  Ray Essick <essick@ddna.labs.mot.com> & Nick Clifton  <nickc@redhat.com>
+
+	* config/mcore/mcore.md (rotlsi3): Allow allow rotations by a
+	constant amount.  Do not generate ROTL instruction.
+
 Fri Aug 18 16:22:20 2000  Alexandre Oliva  <aoliva@redhat.com>
 
 	* config/sh/elf.h: Do not include sh/sh.h.
