--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2000-08-18  Zack Weinberg  <zack@wolery.cumb.org>
+
+	* gcc.dg/cpp/lexstrng.c: Don't include string.h.
+	* gcc.dg/cpp/paste2.c: Don't include string.h.  Prototype strcmp.
+
 Fri Aug 18 16:57:35 2000  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
 
 	* gcc.c-torture/compile/20000818-1.c: New test.
