--- a/gcc/f/ChangeLog
+++ b/gcc/f/ChangeLog
@@ -1,3 +1,10 @@
+2000-08-19  Toon Moene  <toon@moene.indiv.nluug.nl>
+
+	* top.c (ffe_decode_option): Disable -fdebug-kludge
+	and warn about it.
+	* lang-options.h: Document the fact.
+	* g77.texi: Ditto.
+
 2000-08-13  Toon Moene  <toon@moene.indiv.nluug.nl>
 
 	* bugs.texi: Describe new ability to emit debug info
