--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+Sat Aug 19 09:18:47 2000  Jeffrey A Law  (law@cygnus.com)
+
+	* invoke.texi: Clean up linux-gnu vs linux comments.
+
 2000-08-19  Richard Henderson  <rth@cygnus.com>
 
 	* config/ia64/ia64.c (reg_or_5bit_operand): New.
