--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,8 @@
+2000-08-19  Tom Tromey  <tromey@cygnus.com>
+
+	* java/util/zip/ZipInputStream.java (createZipEntry):
+	Implemented.
+
 Sat Aug 19 11:00:53 2000  Anthony Green  <green@redhat.com>
 
 	* java/util/jar/Attributes.java, java/util/jar/JarEntry.java,
