* cpp.texi: Add @section for assertions.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35811 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+Sat 19-Aug-2000 21:11:45 BST  Neil Booth  <NeilB@earthling.net>
+
+	* cpp.texi: Add @section for assertions.
+
 Sat Aug 19 12:37:08 EDT 2000  John Wehle  (john@feith.com)
 
 	* loop.c (scan_loop): Use CONST_CALL_P instead of
