--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+Sun 20-Aug-2000 09:25:45 BST  Neil Booth  <NeilB@earthling.net>
+
+	* fix-header.c (main): Initialize cpplib.
+
 2000-08-19  Michael Meissner  <meissner@redhat.com>
 
 	* ifcvt.c (find_if_block): Do not assume that a THEN block has any
