* parse.y (patch_switch_statement): Disallow `long' in switch 	expressions.  Fixes PR gcj/310.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35819 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,8 @@
+2000-08-09  Tom Tromey  <tromey@cygnus.com>
+
+	* parse.y (patch_switch_statement): Disallow `long' in switch
+	expressions.  Fixes PR gcj/310.
+
 2000-08-15  Alexandre Petit-Bianco  <apbianco@cygnus.com>
 
 	* decl.c (finit_leg_identifier_node): New global.
