--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,5 +1,8 @@
 2000-08-09  Tom Tromey  <tromey@cygnus.com>
 
+	* parse.y (check_abstract_method_definitions): Now return `int'.
+	Check implemented interfaces.  Fixes PR gcj/305.
+
 	* parse.y (patch_switch_statement): Disallow `long' in switch
 	expressions.  Fixes PR gcj/310.
 
