* config/ia64/ia64.c (emit_insn_group_barriers): Stop if ar.lc         assigned before a loop.
        * config/ia64/ia64.md (ashlsi3): Zero extend the shift count.
        (ashrsi3, lshrsi3): Likewise.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35823 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,11 @@
+2000-08-20  Richard Henderson  <rth@cygnus.com>
+
+	* config/ia64/ia64.c (emit_insn_group_barriers): Stop if ar.lc
+	assigned before a loop.
+
+	* config/ia64/ia64.md (ashlsi3): Zero extend the shift count.
+	(ashrsi3, lshrsi3): Likewise.
+
 2000-08-20  Gabriel Dos Reis  <gdr@codesourcery.com>
 
 	* c-lang.c: #include diagnostic.h
