* java/util/jar/JarFile.java: Don't call         java.util.zip.ZipFile.getEntry twice.  From Mark Wielaard         <mark@klomp.org>.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35824 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,9 @@
+Sun Aug 20 12:33:43 2000  Anthony Green  <green@redhat.com>
+
+	* java/util/jar/JarFile.java: Don't call
+	java.util.zip.ZipFile.getEntry twice.  From Mark Wielaard
+	<mark@klomp.org>.
+	
 Sun Aug 20 09:51:48 2000  Anthony Green  <green@redhat.com>
 
 	* java/net/URLClassLoader.java: Find the JarEntry via the JarFile.
