* flow.c (merge_blocks_nomove): Don't seek back past the bb note.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35827 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-08-20  Richard Henderson  <rth@cygnus.com>
+
+	* flow.c (merge_blocks_nomove): Don't seek back past the bb note.
+
 2000-08-20  Zack Weinberg  <zack@wolery.cumb.org>
 
 	* cppinit.c (cpp_init): Set global flag when called.
