--- a/gcc/f/ChangeLog
+++ b/gcc/f/ChangeLog
@@ -1,3 +1,7 @@
+2000-08-21  Jakub Jelinek  <jakub@redhat.com>
+
+	* lang-specs.h: Pass -I* options to f771.
+
 2000-08-19  Toon Moene  <toon@moene.indiv.nluug.nl>
 
 	* top.c (ffe_decode_option): Disable -fdebug-kludge
