--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,15 @@
+2000-08-21  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.c-torture/compile/20000606-1.c: New test.
+	* gcc.c-torture/compile/20000728-1.c: New test.
+	* gcc.c-torture/execute/20000801-1.c: New test.
+	* gcc.c-torture/execute/20000801-2.c: New test.
+	* gcc.c-torture/execute/20000819-1.c: New test.
+	* gcc.c-torture/execute/20000819-1.x: XFAIL.
+	* gcc.dg/20000629-1.c: New test.
+	* gcc.dg/20000724-1.c: New test.
+	* gcc.dg/20000807-1.c: New test.
+
 Sun Aug 20 01:41:35 MSD 2000 Dennis Chernoivanov <cdi@sparc.spb.su>
 
 	* gcc.dg/cpp/pragma-1.c: New test.
