--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-08-21  Richard Earnshaw  <rearnsha@arm.com>
+
+	* flow.c (init_propagate_block_info): Handle SUBREG in a jump
+	condition expression.
+
 2000-08-20  Richard Henderson  <rth@cygnus.com>
 
 	* flow.c (merge_blocks_nomove): Don't seek back past the bb note.
