--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,5 +1,7 @@
 2000-08-21  Jakub Jelinek  <jakub@redhat.com>
 
+	* g++.old-deja/g++.other/loop2.C: New test.
+
 	* gcc.c-torture/compile/20000606-1.c: New test.
 	* gcc.c-torture/compile/20000728-1.c: New test.
 	* gcc.c-torture/execute/20000801-1.c: New test.
