prevent the deletion of a file before it is read on DOS
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35848 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2000-08-05  Eli Zaretskii  <eliz@is.elta.co.il>
+
+	* fixinc/fixincl.c (fix_with_system): Pipe the output of
+	"external" fixes through `cat', to avoid truncating the input
+	file by redirection.
+
 2000-08-21  Jakub Jelinek  <jakub@redhat.com>
 
 	* config/i386/i386.md (lea_general_1): Copy insn condition to split
