--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2000-08-21  DJ Delorie  <dj@redhat.com>
+
+	* MAINTAINERS: Add self as a libiberty maintainer
+
 2000-08-16  Alexandre Oliva  <aoliva@redhat.com>
 
 	* configure.in (libstdcxx_flags): Use
