* lang-specs.h: Do not process -o or run the assembler if         -fsyntax-only.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35853 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -18,6 +18,7 @@
 
         * gcc.c (cc1_options): Do not process -o or run the assembler if
 	-fsyntax-only.
+	* objc/lang-spec.h: Likewise.
 
 2000-08-21  Eli Zaretskii  <eliz@is.elta.co.il>
 
