--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2000-08-21  Nix  <nix@esperi.demon.co.uk>
+        
+	* lang-specs.h: Do not process -o or run the assembler if
+	-fsyntax-only.
+
 2000-08-21  Joseph S. Myers  <jsm28@cam.ac.uk>
 
 	* decl.c (flag_hosted, flag_noniso_default_format_attributes): New
