--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,8 @@
+2000-08-21  Nix  <nix@esperi.demon.co.uk>
+        
+	* lang-specs.h: Do not process -o or run the assembler if
+	-fsyntax-only.
+
 2000-08-09  Tom Tromey  <tromey@cygnus.com>
 
 	* parse.y (check_abstract_method_definitions): Now return `int'.
