* c-common.c (init_dollar_format_checking, 	maybe_read_dollar_number, finish_dollar_format_checking): New 	functions. 	(dollar_arguments_used, dollar_arguments_count, 	dollar_first_arg_num, dollar_max_arg_used, dollar_format_warned): 	New variables. 	(check_format_info): Support $ formats for scanf and printf width 	and precision.  Always increment format_chars to advance past the 	'*' of precision, not just when the format parameters are 	available to check.
testsuite:
	* gcc.dg/c90-printf-3.c, gcc.dg/c90-scanf-2.c,
	gcc.dg/c90-scanf-3.c, gcc.dg/c90-scanf-4.c,
	gcc.dg/c90-strftime-1.c, gcc.dg/c99-printf-3.c,
	gcc.dg/c99-scanf-1.c, gcc.dg/c99-scanf-2.c, gcc.dg/c99-scanf-3.c,
	gcc.dg/format-xopen-1.c: New tests.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35856 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,16 @@
+2000-08-21  Joseph S. Myers  <jsm28@cam.ac.uk>
+
+	* c-common.c (init_dollar_format_checking,
+	maybe_read_dollar_number, finish_dollar_format_checking): New
+	functions.
+	(dollar_arguments_used, dollar_arguments_count,
+	dollar_first_arg_num, dollar_max_arg_used, dollar_format_warned):
+	New variables.
+	(check_format_info): Support $ formats for scanf and printf width
+	and precision.  Always increment format_chars to advance past the
+	'*' of precision, not just when the format parameters are
+	available to check.
+
 2000-08-21  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* mips.c (block_move_loop, expand_block_move,
