--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,5 +1,13 @@
 2000-08-21  Joseph S. Myers  <jsm28@cam.ac.uk>
 
+	* gcc.dg/c90-printf-3.c, gcc.dg/c90-scanf-2.c,
+	gcc.dg/c90-scanf-3.c, gcc.dg/c90-scanf-4.c,
+	gcc.dg/c90-strftime-1.c, gcc.dg/c99-printf-3.c,
+	gcc.dg/c99-scanf-1.c, gcc.dg/c99-scanf-2.c, gcc.dg/c99-scanf-3.c,
+	gcc.dg/format-xopen-1.c: New tests.
+
+2000-08-21  Joseph S. Myers  <jsm28@cam.ac.uk>
+
 	* gcc.dg/c90-scanf-1.c, gcc.dg/c94-scanf-1.c: New tests.
 
 2000-08-21  Jakub Jelinek  <jakub@redhat.com>
