--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2000-08-21  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.c-torture/execute/20000819-1.x: Remove.
+
 2000-08-21  Joseph S. Myers  <jsm28@cam.ac.uk>
 
 	* gcc.dg/c90-printf-3.c, gcc.dg/c90-scanf-2.c,
