--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,8 @@
+2000-08-21  Tom Tromey  <tromey@cygnus.com>
+
+	* java/util/ResourceBundle.java (trySomeGetBundle): Removed
+	debugging prints.
+
 Sun Aug 20 21:02:48 2000  Anthony Green  <green@redhat.com>
 
 	* java/lang/natSystem.cc (init_properties): Change sourceware
