--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2000-08-21  Jim Wilson  <wilson@cygnus.com>
+
+	* real.c (ereal_from_int, ereal_from_uint, significand_size): Handle
+	INTEL_EXTENDED_IEEE_FORMAT.
+	(toe64): Delete INTEL_EXTENDED_IEEE_FORMAT support.  Unconditionally
+	clear last two bytes of output FP value.
+
 2000-08-21  Graham Stott  <grahams@cygnus.co.uk>
 
 	* config/ia64/ia64.h (REDO_SECTION_INFO_P): Change decl to DECL.
