--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,13 @@
+2000-08-21  Mark Wielaard  <mark@klomp.org>
+
+	* Makefile.in: Rebuilt.
+	* Makefile.am (java/lang/reflect/Constructor.h): Declare Class as
+	a `friend class'.
+	(java/lang/reflect/Field.h): Likewise.
+	(java/lang/reflect/Method.h): Likewise.
+	(gnu/gcj/runtime/VMClassLoader.h): Declare ClassLoader as a
+	`friend class'.
+
 2000-08-21  Tom Tromey  <tromey@cygnus.com>
 
 	* java/util/ResourceBundle.java (trySomeGetBundle): Removed
