2000-08-22  Gabriel Dos Reis  <gdr@codesourcery.com>
	* diagnostic.h (report_problematic_module): Declare.
	* diagnostic.c (report_problematic_module): New function.
	(report_error_function): Tweak.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35866 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2000-08-22  Gabriel Dos Reis  <gdr@codesourcery.com>
+
+	* diagnostic.h (report_problematic_module): Declare.
+	* diagnostic.c (report_problematic_module): New function.
+	(report_error_function): Tweak.
+
 Tue Aug 22 02:31:26 2000  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
 
 	* stmt.c (expand_goto_internal, fixup_gotos): Only check
