--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+Tue Aug 22 01:44:43 2000  Jeffrey A Law  (law@cygnus.com)
+
+	* protoize.c (munge_compile_params): Fix typo and formatting buglets.
+
 2000-08-22  Gabriel Dos Reis  <gdr@codesourcery.com>
 
 	* diagnostic.h (report_problematic_module): Declare.
