* c-common.c (check_format_info): Give the 'some locales' warning 	for strftime %Ey rather than the unconditional 'only last 2 digits 	of year' one.
testsuite:
	* gcc.dg/c90-strftime-2.c, gcc.dg/c99-strftime-1.c,
	gcc.dg/c99-strftime-2.c: New tests.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35874 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2000-08-22  Joseph S. Myers  <jsm28@cam.ac.uk>
+
+	* gcc.dg/c90-strftime-2.c, gcc.dg/c99-strftime-1.c,
+	gcc.dg/c99-strftime-2.c: New tests.
+
 2000-08-22  Richard Henderson  <rth@cygnus.com>
 
 	* gcc.c-torture/execute/20000822-1.c: New test.
